Updates to use JavaFX 11 and module system